# PlaneClassification

./: CMakeLists.txt  README.md  compare.py  model.txt  readme.txt
include/: matrix.hpp
src/: task2.cpp
